--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,6 +82,7 @@
       </div>
 
       <button type="submit">Login</button>
+      <input type="checkbox" name="rememberMe"> Remember Me
       <div class="register-link">
         <p>Don't have an account?</p>
         <a href="/register" class="btn btn-secondary">Register</a>
