--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -54,6 +54,116 @@ body {
   user-select: none;
   color: var(--color-dark);
 }
+
+/* ========================== Dashboard ==================================== */
+.dashboard {
+  width: 100%;
+  margin-top: 2rem;
+  padding-bottom: 4.05rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-sizing: border-box;
+  background-color: var(--color-white);
+  font-family: "Poppins", sans-serif;
+  border-radius: var(--card-border-radius);
+}
+.dashboard label {
+  color: #fff;
+}
+.dashboard textarea {
+  margin: 0 3rem 10px 0;
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  overflow: hidden;
+  width: 45%;
+  border: 1px solid #000;
+}
+.dashboard textarea::placeholder {
+  color: #000;
+  font-family: "Poppins", sans-serif;
+}
+.dashboard h2 {
+  text-align: left;
+  margin-bottom: 10px;
+  margin-top: 1.5rem;
+  color: #000;
+}
+.dashboard03 {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.dashboard01 {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 75%;
+}
+.dashboard01 textarea {
+  width: 45%;
+}
+.dashboard02 {
+  width: 75%;
+}
+.dashboard04 {
+  width: 75%;
+}
+.sideMenu {
+  width: 5%;
+  position: absolute;
+  top: 11%;
+  right: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  cursor: pointer;
+}
+.sideMenu img {
+  width: 50%;
+}
+#BulletPoints {
+  height: 100%;
+}
+#BulletPoints ul {
+  margin: 0;
+  padding: 0;
+}
+#BulletPoints ul h2 {
+  font-size: 20px;
+  margin: 1rem 0;
+  color: #000;
+}
+#BulletPoints ul li {
+  list-style: none;
+  font-size: 15px;
+  margin: 15px;
+  line-height: 23px;
+}
+#ImgUploadButton {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: #fff;
+  left: 0;
+  cursor: pointer;
+}
+.listingInputWrapper {
+  width: 48%;
+  padding: 1rem;
+  background: #f99500;
+  position: relative;
+  color: #fff;
+  border-radius: 8px;
+  text-align: center;
+}
+/* ========================== End Dashboard ==================================== */
 .ProductWrapper {
   display: block;
 }
