--- a/views/AdminPanel.ejs
+++ b/views/AdminPanel.ejs
@@ -44,7 +44,7 @@
             <h3>Messages</h3>
             <span class="message-count">26</span>
           </a>
-          <a href="#" class="active" id="AmazonProductTool">
+          <a href="#" class="active" onclick="hideDashboard()">
             <i class="material-icons">inventory</i>
             <h3>Products</h3>
           </a>
@@ -59,6 +59,10 @@
           <a href="#">
             <i class="material-icons">add</i>
             <h3>Add Product</h3>
+          </a>
+          <a href="#" onclick="showDashboard()">
+            <i class="material-icons">link</i>
+            <h3>Generate Preview Links</h3>
           </a>
           <a href="/login">
             <i class="material-icons">logout</i>
@@ -151,6 +155,164 @@
           </table>
           <a href="#">Show All</a>
         </div>
+        <form
+          class="dashboard"
+          method="post"
+          action="/"
+          enctype="multipart/form-data"
+        >
+          <div class="dashboard01">
+            <h2>Title</h2>
+            <textarea
+              cols="66"
+              rows="1"
+              onchange="dashboardHeading(value)"
+              placeholder="Title...."
+              name="title"
+            ></textarea>
+          </div>
+          <div class="dashboard02">
+            <h2>Product Description</h2>
+            <textarea
+              id="input-field01"
+              cols="30"
+              rows="1"
+              placeholder="1. Bullet Points...."
+              name="bulletPoint01"
+            ></textarea>
+            <textarea
+              id="input-field02"
+              cols="30"
+              rows="1"
+              placeholder="2. Bullet Points...."
+              name="bulletPoint02"
+            ></textarea>
+            <textarea
+              id="input-field03"
+              cols="30"
+              rows="1"
+              placeholder="3. Bullet Points...."
+              name="bulletPoint03"
+            ></textarea>
+            <textarea
+              id="input-field04"
+              cols="30"
+              rows="1"
+              placeholder="4. Bullet Points...."
+              name="bulletPoint04"
+            ></textarea>
+            <textarea
+              id="input-field05"
+              cols="30"
+              rows="1"
+              placeholder="5. Bullet Points...."
+              name="bulletPoint05"
+            ></textarea>
+            <textarea
+              id="input-field06"
+              cols="30"
+              rows="1"
+              placeholder="6. Bullet Points...."
+              name="bulletPoint06"
+            ></textarea>
+          </div>
+          <div class="dashboard04">
+            <h2>Brand Information</h2>
+            <textarea
+              name="price"
+              id="brandDetail-input0"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="1. Price...."
+            ></textarea>
+            <textarea
+              name="brandName"
+              id="brandDetail-input01"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="1. Brand...."
+            ></textarea>
+            <textarea
+              name="itemForm"
+              id="brandDetail-input02"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="2. Item Form...."
+            ></textarea>
+            <textarea
+              name="manufacture"
+              id="brandDetail-input03"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="3. Manufacturer...."
+            ></textarea>
+            <textarea
+              name="quantity"
+              id="brandDetail-input04"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="4. Item Package Quantity...."
+            ></textarea>
+            <textarea
+              name="PackageInfo"
+              id="brandDetail-input05"
+              onchange="brandDetailInput(event)"
+              cols="30"
+              rows="1"
+              placeholder="4. Package Information...."
+            ></textarea>
+          </div>
+          <div class="dashboard03">
+            <h2 style="text-align: left">Images</h2>
+            <div
+              style="
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+              "
+            >
+              <div class="listingInputWrapper">
+                <p>Upload Listing Image</p>
+                <input
+                  id="ImgUploadButton"
+                  type="file"
+                  name="file"
+                  multiple="multiple"
+                />
+              </div>
+              <div class="listingInputWrapper">
+                <p>Upload A+ Image</p>
+                <input
+                  id="ImgUploadButton"
+                  type="file"
+                  name="APlusFile"
+                  multiple="multiple"
+                />
+              </div>
+            </div>
+          </div>
+          <input
+            style="
+              width: 75%;
+              font-size: 1rem;
+              padding: 1rem;
+              margin: 30px 10px 13px 10px;
+              cursor: pointer;
+              background: #000;
+              color: #fff;
+              border: none;
+              border-radius: 8px;
+            "
+            type="submit"
+            value="Generate Preview Link"
+          />
+        </form>
       </main>
       <div class="right">
         <div class="top">
